# django_with_aiogram

./: db.sqlite3  pyproject.toml
apps/: models.py  serializers.py  urls.py  views.py
bot/: api.py  buttons.py  main.py
root/: settings.py  urls.py
